# ferrum_db

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.toml
src/: main.rs
src/app/: input.rs  mod.rs  query.rs  state.rs
src/config/: mod.rs
src/database/: error.rs  mod.rs
src/ui/: input.rs  mod.rs  results.rs  sidebar.rs  status.rs  table.rs
