[package]
name = "ferrum_db"
version = "0.1.0"
edition = "2021"
authors = ["Loui Recio github.com/louire"]
description = "A modern terminal-based database client written in Rust"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Database drivers
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"] }

# Terminal UI
ratatui = "0.25"
crossterm = "0.27"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"